--- a/KIVY.ipynb
+++ b/KIVY.ipynb
@@ -72,19 +72,19 @@
     "\n",
     "Seperti Class Calculator menginheritance dari Widget di kivy\n",
     "\n",
-    "![kivy4.jpg](attachment:kivy4.jpg)\n",
+    "![](./Project/kivy4.jpg)\n",
     "\n",
     "dan Class CalcApp menginheritance dari App di kivy\n",
     "\n",
-    "![kivy3.jpg](attachment:kivy3.jpg)\n",
+    "![](./Project/kivy3.jpg)\n",
     "\n",
     "# PENJELASAN VARIABEL\n",
     "\n",
-    "![kivy2.jpeg](attachment:kivy2.jpeg)\n",
+    "![](./Project/kivy2.jpeg)\n",
     "\n",
     "# SCREENSHOOT APLIKASI\n",
     "\n",
-    "![kivy1.jpeg](attachment:kivy1.jpeg)\n",
+    "![](./Project/kivy1.jpeg)\n",
     "   \n"
    ]
   },
