--- a/Laporan Pygame.ipynb
+++ b/Laporan Pygame.ipynb
@@ -7,7 +7,7 @@
     "# LAPORAN PROJECT \n",
     "_“BAHASA PEMROGRAMAN PYGAME DAN KIVY”_\n",
     "\n",
-    "![utm.png](attachment:utm.png)\n",
+    "![](./Project/utm.png)\n",
     "\n",
     "                                                        \n",
     "                                                            Penyusun :\n",
@@ -47,7 +47,7 @@
     "- BLACK,WHITE,BLUE,GREEN,RED,PURPLE,LIGHT_BLUE\n",
     "\n",
     "Class Wall :\n",
-    "![CLASS%20WALL.PNG](attachment:CLASS%20WALL.PNG)\n",
+    "![CLASS%20WALL.PNG](./Project/CLASS%20WALL.PNG)\n",
     "\n",
     "Di dalam Class Wall terdapat def__init__ untuk mengatur kordinat,lebar,tinggi dan warna dari Wall tersebut.\n",
     "\n",
