--- a/Laporan Pygame.ipynb
+++ b/Laporan Pygame.ipynb
@@ -10,15 +10,15 @@
     "![](./Project/utm.png)\n",
     "\n",
     "                                                        \n",
-    "                                                            Penyusun :\n",
-    "                                                1. Rizqi Afif Khairullah (180441100034)\n",
-    "                                                2. Ahmad Marzuq Alhimni  (180441100071)\n",
+    "                                                       Penyusun :\n",
+    "                                         1. Rizqi Afif Khairullah (180441100034)\n",
+    "                                         2. Ahmad Marzuq Alhimni  (180441100071)\n",
     "\n",
-    "                                                  PROGRAM STUDI SISTEM INFORMASI\n",
-    "                                                     URUSAN TEKNIK INFORMATIKA\n",
-    "                                                          FAKULTAS TEKNIK\n",
-    "                                                    UNIVERSITAS TRUNOJOYO MADURA\n",
-    "                                                                2019\n",
+    "                                              PROGRAM STUDI SISTEM INFORMASI\n",
+    "                                                 URUSAN TEKNIK INFORMATIKA\n",
+    "                                                     FAKULTAS TEKNIK\n",
+    "                                               UNIVERSITAS TRUNOJOYO MADURA\n",
+    "                                                          2019\n",
     "                                                            \n",
     "                                                            \n",
     "__PYGAME__\n",
@@ -39,7 +39,7 @@
     "\n",
     "\n",
     "__C.Code Project__\n",
-    "![PROJECT.png](attachment:PROJECT.png)\n",
+    "![PROJECT.png](./Project/PROJECT.png)\n",
     "\n",
     "__D.PENJELASAN CLASS__\n",
     "\n",
@@ -57,7 +57,7 @@
     "- self.rect       = Kordinat dari image\n",
     "\n",
     "Class Player :\n",
-    "![CLASS%20PAYER.PNG](attachment:CLASS%20PAYER.PNG)\n",
+    "![CLASS%20PAYER.PNG](./Project/CLASS%20PAYER.PNG)\n",
     "    \n",
     "   Di dalam Class Player terdapat def__init untuk mengatur kordinat player, def changespeed untuk mengatur kecepatan player dengan menekan tombol, def move untuk mengatur pergerakan ke kiri ke kanan ke bawah ke atas dan didalan def  move juga untuk mengatur player tidak bisa melewati tembok.\n",
     "\n",
@@ -68,7 +68,7 @@
     "- block_hit_list  = Untuk mengatur agar Player tidak tembus dengan Wall\n",
     "\n",
     "Class Room :\n",
-    "![CLASS%20ROOM%20BASE.PNG](attachment:CLASS%20ROOM%20BASE.PNG)\n",
+    "![CLASS%20ROOM%20BASE.PNG](./Project/CLASS%20ROOM%20BASE.PNG)\n",
     "\n",
     "   Di dalam Class Room terdapat def__init__ untuk membuat list dari bangunan ruangan pada room dalam game,Class ini adalah dasar dari semua Room yg ada di dalam game.\n",
     "  \n",
@@ -79,7 +79,7 @@
     "- self.enemy_sprites = untuk memasukan sprites\n",
     "\n",
     "Class Room1 :\n",
-    "![CLASS%20ROOM1.PNG](attachment:CLASS%20ROOM1.PNG)\n",
+    "![CLASS%20ROOM1.PNG](./Project/CLASS%20ROOM1.PNG)\n",
     "\n",
     "   Didalam Class Room1 terdapat def__init__ dan super__init__() dan ada variable walls untuk mengatur kordinat,lebar,tinggi dan warna walls\n",
     "\n",
@@ -89,7 +89,7 @@
     "- looping \"for\"      = dengan mengeluarkan wall dari induknya\n",
     "\n",
     "Class Room2:\n",
-    "![room1.png](attachment:room1.png)\n",
+    "![room1.png](./Project/room1.png)\n",
     "\n",
     "   Didalam Class Room1 terdapat def__init__ dan super__init__() dan ada variable walls untuk mengatur kordinat,lebar,tinggi dan warna walls\n",
     "\n",
@@ -99,7 +99,7 @@
     "- looping \"for\"      = dengan mengeluarkan wall dari induknya\n",
     "\n",
     "Class Room3:\n",
-    "![room3.png](attachment:room3.png)\n",
+    "![room3.png](./Project/room3.png)\n",
     "\n",
     "   Didalam Class Room1 terdapat def__init__ dan super__init__() dan ada variable walls untuk mengatur kordinat,lebar,tinggi dan warna walls\n",
     "\n",
@@ -109,7 +109,7 @@
     "- looping \"for\"      = dengan mengeluarkan wall dari induknya\n",
     "\n",
     "Def main()\n",
-    "![def%20main.png](attachment:def%20main.png)\n",
+    "![def%20main.png](./Project/def%20main.png)\n",
     "\n",
     "Ini merupakan bagian maknisme game ini\n",
     "\n",
@@ -121,15 +121,15 @@
     "\n",
     "Tampian Game Room 1\n",
     "\n",
-    "![GAME1.PNG](attachment:GAME1.PNG)\n",
+    "![GAME1.PNG](./Project/GAME1.PNG)\n",
     "\n",
     "Tampilan Game Room 2\n",
     "\n",
-    "![GAME2.PNG](attachment:GAME2.PNG)\n",
+    "![GAME2.PNG](./Project/GAME2.PNG)\n",
     "\n",
     "Tampilan Game Room 3\n",
     "\n",
-    "![GAME3.PNG](attachment:GAME3.PNG)\n"
+    "![GAME3.PNG](./Project/GAME3.PNG)\n"
    ]
   },
   {
